; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_rv740_dpm.c_rv740_get_decoded_reference_divider.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_rv740_dpm.c_rv740_get_decoded_reference_divider.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [35 x i8] c"Invalid encoded Reference Divider\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rv740_get_decoded_reference_divider(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %12 [
    i32 0, label %5
    i32 16, label %6
    i32 17, label %7
    i32 18, label %8
    i32 19, label %9
    i32 20, label %10
    i32 21, label %11
  ]

5:                                                ; preds = %1
  store i32 1, i32* %3, align 4
  br label %14

6:                                                ; preds = %1
  store i32 2, i32* %3, align 4
  br label %14

7:                                                ; preds = %1
  store i32 3, i32* %3, align 4
  br label %14

8:                                                ; preds = %1
  store i32 2, i32* %3, align 4
  br label %14

9:                                                ; preds = %1
  store i32 3, i32* %3, align 4
  br label %14

10:                                               ; preds = %1
  store i32 4, i32* %3, align 4
  br label %14

11:                                               ; preds = %1
  store i32 5, i32* %3, align 4
  br label %14

12:                                               ; preds = %1
  %13 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %14

14:                                               ; preds = %12, %11, %10, %9, %8, %7, %6, %5
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i32 @DRM_ERROR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
